# greentic-messaging-providers

./: .env.example  .gitignore  Cargo.toml  MIGRATION_STATUS.md  README.md  packs.lock.json
components/messaging-ingress-slack/: Cargo.toml  README.md  component.manifest.json
components/messaging-ingress-slack/src/: bindings.rs  lib.rs
components/messaging-ingress-slack/wit/messaging-ingress-slack/: world.wit
components/messaging-ingress-teams/: Cargo.toml  README.md  component.manifest.json
components/messaging-ingress-teams/src/: bindings.rs  lib.rs
components/messaging-ingress-teams/wit/messaging-ingress-teams/: world.wit
components/messaging-ingress-telegram/: Cargo.toml  README.md  component.manifest.json
components/messaging-ingress-telegram/src/: bindings.rs  lib.rs
components/messaging-ingress-telegram/wit/messaging-ingress-telegram/: world.wit
components/messaging-ingress-whatsapp/: Cargo.toml  README.md  component.manifest.json
components/messaging-ingress-whatsapp/src/: bindings.rs  lib.rs
components/messaging-ingress-whatsapp/wit/messaging-ingress-whatsapp/: world.wit
components/messaging-provider-dummy/: Cargo.toml  README.md  component.manifest.json  messaging-provider-dummy.wasm
components/messaging-provider-dummy/src/: bindings.rs  lib.rs
components/messaging-provider-dummy/wit/messaging-provider-dummy/: world.wit
components/messaging-provider-email/: Cargo.toml  README.md  component.manifest.json
components/messaging-provider-email/src/: auth.rs  bindings.rs  config.rs  describe.rs  graph.rs  ingress.rs  lib.rs  ops.rs
components/messaging-provider-email/wit/messaging-provider-email/: world.wit
components/messaging-provider-slack/: Cargo.toml  README.md  component.manifest.json
components/messaging-provider-slack/src/: bindings.rs  config.rs  describe.rs  lib.rs  ops.rs
components/messaging-provider-slack/wit/messaging-provider-slack/: world.wit
components/messaging-provider-teams/: Cargo.toml  README.md  component.manifest.json
components/messaging-provider-teams/src/: auth.rs  bindings.rs  config.rs  describe.rs  graph.rs  lib.rs  ops.rs  token.rs
components/messaging-provider-teams/wit/messaging-provider-teams/: world.wit
components/messaging-provider-telegram/: Cargo.toml  README.md  component.manifest.json
components/messaging-provider-telegram/src/: bindings.rs  config.rs  describe.rs  lib.rs  ops.rs
components/messaging-provider-telegram/wit/messaging-provider-telegram/: interfaces.wit  world.wit
components/messaging-provider-webchat/: Cargo.toml  README.md  component.manifest.json
components/messaging-provider-webchat-gui/: Cargo.toml  component.manifest.json
components/messaging-provider-webchat-gui/src/: lib.rs
components/messaging-provider-webchat-gui/src/directline/: host.rs  mod.rs
components/messaging-provider-webchat/src/: bindings.rs  config.rs  describe.rs  lib.rs  ops.rs
components/messaging-provider-webchat/src/directline/: host.rs  http.rs  jwt.rs  mod.rs  state.rs  store.rs
components/messaging-provider-webex/: Cargo.toml  README.md  component.manifest.json
components/messaging-provider-webex/src/: bindings.rs  config.rs  describe.rs  lib.rs  ops.rs
components/messaging-provider-whatsapp/: Cargo.toml  README.md  component.manifest.json
components/messaging-provider-whatsapp/src/: bindings.rs  config.rs  describe.rs  lib.rs  ops.rs
components/provision/: Cargo.toml  README.md  component.manifest.json
components/provision/src/: bindings.rs  lib.rs
components/slack/: Cargo.toml  README.md  capabilities_v1.json  component.manifest.json
components/slack/src/: bindings.rs  lib.rs
components/teams/: Cargo.toml  README.md  capabilities_v1.json  component.manifest.json
components/teams/src/: bindings.rs  lib.rs
components/telegram/: Cargo.toml  README.md  capabilities_v1.json  component.manifest.json
components/telegram-webhook/: Cargo.toml  component.manifest.json
components/telegram-webhook/schemas/: reconcile.input.schema.json  reconcile.output.schema.json
components/telegram-webhook/src/: bindings.rs  lib.rs
components/telegram/src/: bindings.rs  lib.rs
components/webchat/: Cargo.toml  README.md  component.manifest.json
components/webchat/src/: bindings.rs  lib.rs
components/webex/: Cargo.toml  README.md  component.manifest.json
components/webex-webhook/: Cargo.toml  README.md  component.manifest.json
components/webex-webhook/schemas/: reconcile.input.schema.json  reconcile.output.schema.json
components/webex-webhook/src/: lib.rs
components/webex/src/: bindings.rs  lib.rs
components/whatsapp/: Cargo.toml  README.md  capabilities_v1.json  component.manifest.json
components/whatsapp/src/: bindings.rs  lib.rs
crates/component_questions/: Cargo.toml
crates/component_questions/src/: bindings.rs  lib.rs  spec.rs
crates/component_questions/tests/: emit.rs  example_answers.rs  spec_parse_ok.rs  validate.rs
crates/greentic-messaging-cardkit/: Cargo.toml
crates/greentic-messaging-packgen/: Cargo.toml
crates/greentic-messaging-packgen/src/: main.rs
crates/greentic-messaging-packgen/tests/: packgen.rs
crates/greentic-messaging-planned/: Cargo.toml
crates/greentic-messaging-planned/src/: lib.rs
crates/greentic-messaging-tester/: Cargo.toml  README.md
crates/greentic-messaging-tester/providers/: dummy.requirements.json  email.requirements.json  slack.requirements.json  teams.requirements.json  telegram.requirements.json  webchat-gui.requirements.json  webchat.requirements.json  webex.requirements.json  whatsapp.requirements.json
crates/greentic-messaging-tester/src/: http_mock.rs  main.rs  requirements.rs  values.rs  wasm_harness.rs
crates/greentic-messaging-tester/tests/: listen_http_in.rs  send_telegram.rs  webhook_telegram.rs
crates/messaging-cardkit/: CHANGELOG.md  Cargo.toml  README.md
crates/messaging-cardkit-bin/: Cargo.toml  README.md
crates/messaging-cardkit-bin/src/: lib.rs  main.rs
crates/messaging-cardkit/src/: lib.rs  profiles.rs
crates/messaging-cardkit/tests/: golden_renderers.rs  smoke.rs
(+1064 files in other folders)
