[workspace]
members = [
    "crates/*",
    "components/*",
]
default-members = [
    "crates/messaging-core",
    "crates/provider-common",
    "crates/provider-runtime-config",
    "crates/provider-tests",
]
exclude = [
    "components/ai.greentic.component-templates",
    "components/templates",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.4.15"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
wit-bindgen = "0.51"
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
urlencoding = "2"
greentic-interfaces-wasmtime = "0.4"
greentic-types = "0.4.27"
anyhow = "1"
tempfile = "3"
zip = "7"
schemars = "1"
insta = { version = "1", features = ["json"] }
