[workspace]
members = [
    "crates/*",
    "components/*",
]
default-members = [
    "crates/messaging-core",
    "crates/provider-common",
    "crates/provider-runtime-config",
    "crates/provider-tests",
]
exclude = [
    "components/ai.greentic.component-templates",
    "components/templates",
    "components/questions",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.4.25"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
wit-bindgen = "0.51"
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
urlencoding = "2"
greentic-interfaces-wasmtime = "0.4"
greentic-types = "0.4"
greentic-interfaces = "0.4"
greentic-interfaces-guest = { version = "0.4", default-features = false }
anyhow = "1"
tempfile = "3"
zip = "7"
chrono = "0.4"
schemars = "1"
insta = { version = "1", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.8"
clap = "4"
base64 = "0"
messaging-universal-dto = { path = "crates/messaging-universal-dto" }
