[workspace]
members = [
    "crates/*",
    "components/*",
]
default-members = [
    "crates/messaging-core",
    "crates/provider-common",
    "crates/provider-runtime-config",
    "crates/provider-tests",
    "crates/greentic-messaging-tester",
]
exclude = [
    "components/ai.greentic.component-templates",
    "components/templates",
    "components/questions",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.4.34"
license = "MIT"


[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
wit-bindgen = "0.53"
serde_json = "1"
serde_yaml = {package="serde_yaml_gtc", version="2.5.2"}
serde_yaml_bw = {package="serde_yaml_gtc", version="2.5.2"}
regex = "1"
hmac = "0.12"
sha2 = "0.10"
urlencoding = "2"
greentic-interfaces-wasmtime = "0.4"
greentic-types = "0.4"
greentic-interfaces = "0.4"
greentic-interfaces-guest = { version = "0.4", default-features = false }
greentic-runner-desktop = "0.4"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
zip = "8"
chrono = "0.4"
schemars = "1"
insta = { version = "1", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.8"
clap = "4"
base64 = "0.22"
once_cell = "1"
ciborium = "0.2"
glob = "0.3"
rpassword = "7"
htmlescape = "0.3"
greentic-messaging-planned = { path = "crates/greentic-messaging-planned" }
provider-common = { path = "crates/provider-common" }
ureq = "3"
http = "1"
assert_cmd = "2"
predicates = "3"
wasmtime = { version = "41", features = ["component-model", "cache"] }
wasmtime-wasi = "41"
