[package]
name = "messaging-ingress-slack"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
hmac.workspace = true
sha2.workspace = true
wit-bindgen.workspace = true

[package.metadata.component]
package = "greentic:messaging-ingress-slack"

[package.metadata.component.target]
path = "wit/messaging-ingress-slack"
world = "messaging-ingress-slack"

[package.metadata.component.target.dependencies]
"greentic:http" = { path = "wit/messaging-ingress-slack/deps/http" }
"greentic:secrets-store" = { path = "wit/messaging-ingress-slack/deps/secrets-store" }
"greentic:state" = { path = "wit/messaging-ingress-slack/deps/state" }
"greentic:telemetry" = { path = "wit/messaging-ingress-slack/deps/telemetry" }
"greentic:interfaces-types" = { path = "wit/messaging-ingress-slack/deps/interfaces-types" }
"provider:common" = { path = "wit/messaging-ingress-slack/deps/provider-common" }
