[package]
name = "messaging-ingress-teams"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
urlencoding.workspace = true
wit-bindgen.workspace = true

[package.metadata.component]
package = "greentic:messaging-ingress-teams"

[package.metadata.component.target]
path = "wit/messaging-ingress-teams"
world = "messaging-ingress-teams"

[package.metadata.component.target.dependencies]
"greentic:http" = { path = "wit/messaging-ingress-teams/deps/http" }
"greentic:secrets-store" = { path = "wit/messaging-ingress-teams/deps/secrets-store" }
"greentic:state" = { path = "wit/messaging-ingress-teams/deps/state" }
"greentic:telemetry" = { path = "wit/messaging-ingress-teams/deps/telemetry" }
"greentic:interfaces-types" = { path = "wit/messaging-ingress-teams/deps/interfaces-types" }
"provider:common" = { path = "wit/messaging-ingress-teams/deps/provider-common" }
