[package]
name = "messaging-provider-dummy"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
greentic-types.workspace = true
wit-bindgen.workspace = true

[package.metadata.component]
package = "greentic:provider-schema-core"

[package.metadata.component.target]
path = "../../wit/provider-core"
world = "schema-core"
