[package]
name = "messaging-provider-slack"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
greentic-types.workspace = true
wit-bindgen.workspace = true
base64.workspace = true
messaging-universal-dto.workspace = true

[package.metadata.component]
package = "greentic:messaging-provider-slack-core"

[package.metadata.component.target]
path = "wit/messaging-provider-slack"
world = "messaging-provider-slack"

[package.metadata.component.target.dependencies]
"greentic:http" = { path = "wit/messaging-provider-slack/deps/http" }
"greentic:secrets-store" = { path = "wit/messaging-provider-slack/deps/secrets-store" }
"greentic:interfaces-types" = { path = "wit/messaging-provider-slack/deps/interfaces-types" }
"greentic:provider-schema-core" = { path = "wit/messaging-provider-slack/deps/provider-schema-core" }
