[package]
name = "messaging-provider-teams"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
greentic-types.workspace = true
wit-bindgen.workspace = true
urlencoding.workspace = true
messaging-universal-dto.workspace = true
base64.workspace = true
chrono.workspace = true

[package.metadata.component]
package = "greentic:messaging-provider-teams-core"

[package.metadata.component.target]
path = "wit/messaging-provider-teams"
world = "messaging-provider-teams"

[package.metadata.component.target.dependencies]
"greentic:http" = { path = "wit/messaging-provider-teams/deps/http" }
"greentic:secrets-store" = { path = "wit/messaging-provider-teams/deps/secrets-store" }
"greentic:interfaces-types" = { path = "wit/messaging-provider-teams/deps/interfaces-types" }
"greentic:provider-schema-core" = { path = "wit/messaging-provider-teams/deps/provider-schema-core" }
