[package]
name = "messaging-provider-telegram"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
greentic-types.workspace = true
wit-bindgen.workspace = true
base64.workspace = true
messaging-universal-dto.workspace = true

[package.metadata.component]
package = "greentic:messaging-provider-telegram-core"

[package.metadata.component.target]
path = "wit/messaging-provider-telegram"
world = "messaging-provider-telegram"

[package.metadata.component.target.dependencies]
"greentic:http" = { path = "wit/messaging-provider-telegram/deps/http" }
"greentic:secrets-store" = { path = "wit/messaging-provider-telegram/deps/secrets-store" }
"greentic:provider-schema-core" = { path = "wit/messaging-provider-telegram/deps/provider-schema-core" }
"greentic:interfaces-types" = { path = "wit/messaging-provider-telegram/deps/interfaces-types" }
