[package]
name = "messaging-provider-telegram"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
greentic-types.workspace = true
wit-bindgen.workspace = true
base64.workspace = true
provider-common.workspace = true

[package.metadata.component]
package = "greentic:messaging-provider-telegram-core"

[package.metadata.component.target]
path = "wit/messaging-provider-telegram"
world = "component-v0-v6-v0"

[package.metadata.component.target.dependencies]
"greentic:http" = { path = "wit/messaging-provider-telegram/deps/http" }
"greentic:secrets-store" = { path = "wit/messaging-provider-telegram/deps/secrets-store" }
"greentic:interfaces-types" = { path = "wit/messaging-provider-telegram/deps/interfaces-types" }
