[package]
name = "messaging-provider-webchat-gui"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
greentic-types.workspace = true
sha2.workspace = true
wit-bindgen.workspace = true
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
uuid = { workspace = true, features = ["v4"] }
urlencoding.workspace = true
provider-common.workspace = true
webchat-directline-core.workspace = true

[package.metadata.component]
package = "greentic:messaging-provider-webchat-gui-core"

[package.metadata.component.target]
path = "../messaging-provider-webchat/wit/messaging-provider-webchat"
world = "component-v0-v6-v0"

[package.metadata.component.target.dependencies]
"greentic:state" = { path = "../messaging-provider-webchat/wit/messaging-provider-webchat/deps/state" }
"greentic:interfaces-types" = { path = "../messaging-provider-webchat/wit/messaging-provider-webchat/deps/interfaces-types" }
"greentic:secrets-store" = { path = "../messaging-provider-webchat/wit/messaging-provider-webchat/deps/secrets-store" }
"greentic:provider-schema-core" = { path = "../messaging-provider-webchat/wit/messaging-provider-webchat/deps/provider-schema-core" }
