[package]
name = "messaging-provider-webex"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
greentic-types.workspace = true
wit-bindgen.workspace = true
base64.workspace = true
messaging-universal-dto.workspace = true

[package.metadata.component]
package = "greentic:messaging-provider-webex-core"

[package.metadata.component.target]
path = "wit/messaging-provider-webex"
world = "messaging-provider-webex"

[package.metadata.component.target.dependencies]
"greentic:http" = { path = "wit/messaging-provider-webex/deps/http" }
"greentic:secrets-store" = { path = "wit/messaging-provider-webex/deps/secrets-store" }
"greentic:interfaces-types" = { path = "wit/messaging-provider-webex/deps/interfaces-types" }
"greentic:provider-schema-core" = { path = "wit/messaging-provider-webex/deps/provider-schema-core" }
