[package]
name = "provision"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
greentic-interfaces.workspace = true
greentic-interfaces-guest = { workspace = true, features = ["component-node", "state-store"] }

[package.metadata.component.target]
path = "../../wit/component-node"
world = "node"
