[package]
name = "teams"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
provider-common = { path = "../../crates/provider-common" }
provider-runtime-config = { path = "../../crates/provider-runtime-config" }
wit-bindgen.workspace = true
urlencoding.workspace = true

[package.metadata.component]
package = "provider:teams"

[package.metadata.component.target]
path = "wit/teams"
world = "teams"

[package.metadata.component.target.dependencies]
"greentic:secrets-store" = { path = "wit/teams/deps/secrets-store" }
"greentic:http" = { path = "wit/teams/deps/http" }
"greentic:state" = { path = "wit/teams/deps/state" }
"greentic:telemetry" = { path = "wit/teams/deps/telemetry" }
"greentic:interfaces-types" = { path = "wit/teams/deps/interfaces-types" }
"provider:common" = { path = "wit/teams/deps/provider-common" }
