[package]
name = "teams"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
provider-common = { path = "../../crates/provider-common" }
provider-runtime-config = { path = "../../crates/provider-runtime-config" }
wit-bindgen.workspace = true
urlencoding.workspace = true

[package.metadata.component]
package = "provider:teams"

[package.metadata.component.target]
path = "wit/teams"
world = "component-v0-v6-v0"

[package.metadata.component.target.dependencies]
"greentic:interfaces-types" = { path = "wit/teams/deps/interfaces-types" }
"greentic:secrets-store" = { path = "wit/teams/deps/secrets-store" }
"greentic:http" = { path = "wit/teams/deps/http" }
"greentic:telemetry" = { path = "wit/teams/deps/telemetry" }
