[package]
name = "webex"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
provider-common = { path = "../../crates/provider-common" }
provider-runtime-config = { path = "../../crates/provider-runtime-config" }
wit-bindgen.workspace = true

[package.metadata.component]
package = "provider:webex"

[package.metadata.component.target]
path = "wit/webex"
world = "webex"

[package.metadata.component.target.dependencies]
"greentic:secrets-store" = { path = "wit/webex/deps/secrets-store" }
"greentic:http" = { path = "wit/webex/deps/http" }
"greentic:state" = { path = "wit/webex/deps/state" }
"greentic:telemetry" = { path = "wit/webex/deps/telemetry" }
"greentic:interfaces-types" = { path = "wit/webex/deps/interfaces-types" }
"provider:common" = { path = "wit/webex/deps/provider-common" }
