[package]
name = "whatsapp"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
provider-common = { path = "../../crates/provider-common" }
provider-runtime-config = { path = "../../crates/provider-runtime-config" }
wit-bindgen.workspace = true

[package.metadata.component]
package = "provider:whatsapp"

[package.metadata.component.target]
path = "wit/whatsapp"
world = "component-v0-v6-v0"

[package.metadata.component.target.dependencies]
"greentic:interfaces-types" = { path = "wit/whatsapp/deps/interfaces-types" }
"greentic:secrets-store" = { path = "wit/whatsapp/deps/secrets-store" }
"greentic:http" = { path = "wit/whatsapp/deps/http" }
"greentic:telemetry" = { path = "wit/whatsapp/deps/telemetry" }
