[package]
name = "questions"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_bw.workspace = true
greentic-interfaces.workspace = true
greentic-interfaces-guest = { workspace = true, features = ["component-node"] }

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[package.metadata.component.target]
path = "../../wit/component-node"
world = "node"
