[package]
name = "greentic-messaging-packgen"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "greentic-messaging-packgen"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.31", features = ["derive"] }
greentic-interfaces = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha2 = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
