[package]
name = "greentic-messaging-packgen"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "greentic-messaging-packgen"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
greentic-interfaces = { workspace = true }
greentic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
