[package]
name = "greentic-messaging-planned"
version = "0.4.27"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
greentic-types = { workspace = true }
provider-common = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
