[package]
name = "greentic-messaging-tester"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
greentic-interfaces-wasmtime = { workspace = true, features = ["control-helpers"] }
greentic-types = { workspace = true }
messaging-universal-dto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
greentic-messaging-planned = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
http = { workspace = true }
wasmtime = { workspace = true, features = ["component-model", "cache"] }
wasmtime-wasi = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
hmac = { workspace = true }
sha2 = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
