[package]
name = "messaging-cardkit-bin"
version.workspace = true
edition.workspace = true
publish = false

description = "CardKit render demo CLI + HTTP server."

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros", "json"] }
clap = { workspace = true, features = ["derive"] }
messaging-cardkit = { path = "../messaging-cardkit", version = "0.1.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
